plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.0-SNAPSHOT'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.jdk'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks {
	compileJava {
		options.compilerArgs.add("--enable-preview")
	}

	compileTestJava {
		options.compilerArgs.add("--enable-preview")
	}

	test {
		useJUnitPlatform()
		jvmArgs(["--enable-preview", "-XX:+EnableDynamicAgentLoading", "-Xshare:auto"])
	}
}

